# crates/analytics-api/src/openapi.rs
@@ -16,6 +16,7 @@ pub fn build() -> utoipa::openapi::OpenApi {
             crate::router::cancel_operation,
             crate::router::manifest,
             crate::router::register_table,
+            crate::router::register_tables,
             crate::router::unscoped_sql_query,
             crate::router::unscoped_structured_query,
             crate::router::tenant_query,
